[project]
name = "thelpbrand_crew"
version = "0.1.0"
description = "thelpbrand_crew using crewAI"
authors = [{ name = "Javier", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
thelpbrand_crew = "thelpbrand_crew.main:run"
run_crew = "thelpbrand_crew.main:run"
train = "thelpbrand_crew.main:train"
replay = "thelpbrand_crew.main:replay"
test = "thelpbrand_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
